fixtures/rust/fallback/should_fail/unwrap_or_default.rs
pub fn read_region(region: Option<String>) -> String {
    region.unwrap_or_default()
}
